<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_participant_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kennyrozario.htnmobilechallenge.ParticipantViewActivity">

    <!-- Picture, First Name, Last Name, and Company -->
    <LinearLayout
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/p_view_avatar"
            android:layout_width="@dimen/avatar_large"
            android:layout_height="@dimen/avatar_large"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/p_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/name"/>

            <TextView
                android:id="@+id/p_view_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>

        </LinearLayout>

    </LinearLayout>

    <!-- Phone Information -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/phone_number"
            android:paddingTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="14sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <View
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"/>

    </LinearLayout>

    <!-- Email Information -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/email_address"
            android:paddingTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_account"
            android:textSize="14sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

        <View
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"/>

    </LinearLayout>

    <!-- Email Information -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skill_title"
            android:textColor="@color/colorPrimaryDark"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

        <TextView
            android:id="@+id/skills_list"
            android:paddingTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p_view_skills"
            android:textSize="14sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    </LinearLayout>

</LinearLayout>
